[gd_scene load_steps=3 format=3 uid="uid://ds7jlu01k8mhi"]

[ext_resource type="Script" path="res://Tabs/Objects/Objects.gd" id="1"]
[ext_resource type="Script" path="res://Resources/Scripts/FormatLabel.gd" id="2"]

[node name="Objects" type="VBoxContainer"]
offset_right = 1016.0
offset_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="ObjectLabel" type="Label" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Object Count: %d"
horizontal_alignment = 1
script = ExtResource("2")

[node name="WarningLabel" type="Label" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Too many objects, maximum count is 32. The game will crash."
horizontal_alignment = 1
script = ExtResource("2")

[node name="ObjectContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 16

[node name="SprayLabel" type="Label" parent="HBoxContainer/VBoxContainer2/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Spray Count: %d"
horizontal_alignment = 1
script = ExtResource("2")

[node name="SprayContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 20
